Update CORS configuration to allow dynamic localhost origins and add support for additional headers and credentials. Change API path registration to allow all endpoints.